--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8" /> <!-- Character encoding -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Meta tag for vieport -->
   <title>See 'N Say Story Maker</title> <!-- Title of the webpage -->
-  <link href="css/main.css" rel="stylesheet" type="text/css" /> <!-- Link to the external CSS file for styling -->
-  <script src="js/app.js" defer></script> <!-- Link to the external JavaScript file -->
+  <link href="/css/main.css" rel="stylesheet" type="text/css" /> <!-- Link to the external CSS file for styling -->
+  <link href="/css/normalize.css" rel="stylesheet" type="text/css" />
+  <script src="/js/app.js" defer></script> <!-- Link to the external JavaScript file -->
   <link rel="icon" type="Icon Image" href="/imgs/bookworm2.png">
 </head>
 
